--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Tianyi (Billy) Ma"
   avatar           : "profile.png"
   bio              : "CS PhD Student at University of Notre Dame"
-  location         : "Location"
+  location         : "Granger, U.S."
   employer         :
   pubmed           :  #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    :  "https://scholar.google.com/citations?hl=en&user=B_M9WPsAAAAJ"
