--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Tianyi (Billy) Ma"
-  avatar           : "profile.png"
+  avatar           : "selfie.jpg"
   bio              : "CS PhD Student at University of Notre Dame"
   location         : "Granger, U.S."
   employer         :
