--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ atom_feed:
 
 
 # SEO Related
-google_site_verification :
+google_site_verification : "xPFJUpDV6hBiQnbF8Syrr1_fhK3qxjdulbf3TORm4u8"
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
