--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "tianyi-ma-03billy" 
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
