Fix pronouns capitalization in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   # Biographic information
   avatar           : "selfie.jpg"
   name             : "Tianyi (Billy) Ma"
-  pronouns         : "He/his" # example: "she/her"  
+  pronouns         : "He/His" # example: "she/her"  
   bio              : "CS PhD Student at University of Notre Dame"
   location         : "Granger, USA"
   employer         : "University of Notre Dame"
